Use gradle tooling api in incremental gradle tests